[gd_scene load_steps=12 format=2]

[ext_resource path="res://Common/UI/PixelArialFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Common/UI/TestingPropertyPanels/PropertySetter/PropertySetterNumeric.tscn" type="PackedScene" id=2]
[ext_resource path="res://Common/UI/PIXEARG_.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Common/UI/TestingPropertyPanels/DynamicPropertyPanel/DynamicPropertyPanel.gd" type="Script" id=4]

[sub_resource type="Animation" id=7]
resource_name = "ExportedChanges"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ExportedTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExportedTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "ExportedChanges"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ExportedTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ExportedTitle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.278431 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 0.278431 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10
shadow_offset = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="DynamicPropertyPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( -290, -231 )
mouse_filter = 2
script = ExtResource( 4 )
property_setter = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/ExportedChanges = SubResource( 7 )
anims/RESET = SubResource( 2 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/ExportedChanges = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = -171.0
margin_right = 264.0
margin_bottom = 171.0
window_title = "Open a Directory"
mode = 2
access = 2

[node name="ExportedTitle" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = -22.0
margin_right = 174.0
margin_bottom = 22.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Exported Settings"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 219.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 209.0
margin_bottom = 71.0
custom_constants/separation = 8
alignment = 1

[node name="SettingsTitle" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 199.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
text = "Something Settings:"
align = 1

[node name="PropertySetters" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 199.0
margin_bottom = 30.0
custom_constants/separation = 5

[node name="Buttons" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 199.0
margin_bottom = 61.0
custom_constants/separation = 20
alignment = 1

[node name="ResetButton" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
margin_left = 32.0
margin_right = 87.0
margin_bottom = 23.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
text = "Reset"

[node name="ExportButton" type="Button" parent="PanelContainer/VBoxContainer/Buttons"]
margin_left = 107.0
margin_right = 166.0
margin_bottom = 23.0
focus_mode = 0
custom_fonts/font = ExtResource( 1 )
enabled_focus_mode = 0
text = "Export"

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/Buttons/ResetButton" to="." method="_on_ResetButton_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/Buttons/ExportButton" to="." method="_on_ExportButton_button_up"]
